<resources>
    <string name="app_name">西邮木函</string>
    <string name="input_account_hint">请输入8位数学号</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="input_check_code_hint">请输入验证码</string>
    <string name="login_button_text">登录</string>
    <string name="internet_unavailable_hint">当前网络不可用..请稍后再试</string>
    <string name="course_text">课程表</string>
    <string name="grade_text">成绩</string>
    <string name="user_text">用户</string>
    <string name="query_school_timetable_button">查询</string>
    <string name="grade">成绩:</string>
    <string name="subject">科目:</string>
    <string name="achievement_point">绩点:</string>
    <string name="subject_type">课程类型:</string>
    <string name="teacher_name">教师姓名:</string>
    <string name="exam_type">考试类型:</string>
    <string name="student_number">学号:</string>
    <string name="class_name">班级:</string>
    <string name="institution">学院:</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="logout">注销账户</string>
    <string name="tip">本应用为前期测试版本，用户界面暂时没有好的想法，如果各位用户有什么好的提案可以联系西安邮电大学计算机学院ThoughtCoding实验室，地点为东区FZ332。如果有对安卓开发感兴趣的同学也可以联系QQ群号：521912724交流，有想加入实验室的同学也可以联系我们。另外感谢所有使用本应用的同学们及对本应用提供帮助的同学们，你们的支持是我们进步的最大动力。\n@西邮ThoughtCoding实验室</string>
</resources>
