<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/round_corner_course_grade_item"
    android:layout_margin="10dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/subject_item"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:text="@string/subject"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/subject_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:textSize="15dp"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/grade_item"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="@string/grade"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/grade_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:textSize="15dp"
                android:gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/achievement_point_item"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="@string/achievement_point"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/achievement_point_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:textSize="15dp"
                android:gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/subject_type_item"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="@string/subject_type"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/subject_type_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:textSize="15dp"
                android:gravity="center_vertical"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>