<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/wallpaper"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/input_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <EditText
            android:id="@+id/input_stuNum"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/round_corner_button"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:hint="@string/input_account_hint"
            android:inputType="number"
            android:maxLength="8"
            android:elevation="10dp"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/round_corner_button"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:elevation="10dp"/>

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/check_code_info"-->
        <!--android:layout_width="250dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_below="@+id/input_user_info"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:orientation="horizontal">-->
        <!--<ImageView-->
            <!--android:id="@+id/check_code"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@mipmap/ic_launcher"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:elevation="10dp"/>-->

        <!--<EditText-->
            <!--android:id="@+id/input_check_code"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/round_corner_button"-->
            <!--android:hint="@string/input_check_code_hint"-->
            <!--android:gravity="center"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:inputType="text"-->
            <!--android:maxLength="4"-->
            <!--android:maxLines="1"-->
            <!--android:elevation="10dp"/>-->
    <!--</LinearLayout>-->

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/round_corner_button"
        android:layout_below="@+id/input_user_info"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        android:text="@string/login_button_text"/>

</RelativeLayout>