<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_corner_student_name_view"
        android:elevation="3dp">

        <TextView
            android:id="@+id/show_name"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/app_black"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_corner_user_info"
        android:elevation="3dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/student_number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/student_number"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/app_black"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/show_student_number"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/app_black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_corner_user_info"
        android:elevation="3dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/class_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/class_name"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/app_black"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/show_class_name"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/app_black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_corner_user_info"
        android:elevation="3dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/institution"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/institution"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/app_black"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/show_institution"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/app_black" />
    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:elevation="3dp"
        android:text="@string/logout"
        android:background="@drawable/round_corner_button"
        android:layout_gravity="center"/>

</LinearLayout>